# simple-neural-network

./: .gitignore  CMakeLists.txt  SNN.cpp  SNN.sln  SNN.vcxproj  SNN.vcxproj.filters  layer.h  neuron.cpp  neuron.h  snn_config.h
src/: CMakeLists.txt  SNN.cpp  layer.cpp  layer.h  main.cpp  matrix.cpp  matrix.h  neuron.cpp  neuron.h  nn.cpp  nn.h  snn_config.h
test/units/: CMakeLists.txt  sample_test.cpp  tests_layer.cpp  tests_main.cpp  tests_matrix.cpp  tests_neuron.cpp  tests_nn.cpp
